--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,7 @@
 [user]
-	name = Fábio D. Batista
+	name = Fábio D. Batista
 	email = fabio.david.batista@gmail.com
+[color]
+	diff = auto
+	status = auto
+	branch = auto
