--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,10 @@
 	diff = auto
 	status = auto
 	branch = auto
+[core]
+	autocrlf = input
+[push]
+	default = matching
+[filter "media"]
+	clean = git-media-clean %f
+	smudge = git-media-smudge %f
