Changed my git email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Fábio D. Batista
-	email = fabio.david.batista@gmail.com
+	email = fabio@elementarsistemas.com.br
 [color]
 	diff = auto
 	status = auto
