--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	branch = auto
 [core]
 	autocrlf = input
+	excludesfile = /Users/fabio/.gitignore_global
 [push]
 	default = matching
 [filter "media"]
@@ -14,3 +15,9 @@
 	smudge = git-media-smudge %f
 [alias]
 	undo-commit = reset --soft HEAD^
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
