Added default key file for some hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,2 +1,7 @@
 ServerAliveInterval 300
 ServerAliveCountMax 2
+
+Host comoservico.com.br *.comoservico.com.br
+    User deploy
+    IdentityFile    ~/.ssh/amazon1.pem
+    IdentitiesOnly yes
