--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,28 @@
 ServerAliveInterval 300
 ServerAliveCountMax 2
 
-Host comoservico.com.br *.comoservico.com.br
+Host elementarsistemas.com.br *.elementarsistemas.com.br paineldaobra.com.br
     User deploy
     IdentityFile    ~/.ssh/amazon1.pem
     IdentitiesOnly yes
+
+Host raspberrypi
+    User pi
+    IdentityFile    ~/.ssh/id_rsa
+    IdentitiesOnly yes
+
+Host consyste.ddns.net
+    Port 31199
+    User elementar
+    IdentityFile    ~/.ssh/id_rsa
+    IdentitiesOnly yes
+
+# --- SourceTree Generated ---
+Host fabiodb-Bitbucket
+	HostName bitbucket.org
+	User fabiodb
+	PreferredAuthentications publickey
+	IdentityFile /Users/fabio/.ssh/fabiodb-Bitbucket
+	UseKeychain yes
+	AddKeysToAgent yes
+# ----------------------------
