--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -557,7 +557,7 @@ scrollback_pager_history_size 4096
 #: If you want to unmap a button, map it to nothing. For example, to
 #: disable opening of URLs with a plain click::
 
-#:     mouse_map left click ungrabbed
+mouse_map left click ungrabbed
 
 #: See all the mappable actions including mouse actions here
 #: <https://sw.kovidgoyal.net/kitty/actions/>.
@@ -818,14 +818,14 @@ scrollback_pager_history_size 4096
 #: that setting a non-zero window_margin_width overrides this and
 #: causes all borders to be drawn.
 
-# window_margin_width 0
+window_margin_width 1
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
 #: horizontal sides. Three values set top, horizontal and bottom. Four
 #: values set top, right, bottom and left.
 
-# single_window_margin_width -1
+single_window_margin_width -1
 
 #: The window margin to use when only a single window is visible (in
 #: pts). Negative values will cause the value of window_margin_width
@@ -2468,3 +2468,5 @@ map kitty_mod+t new_tab_with_cwd !neighbor
 #: }}}
 
 #: }}}
+
+cursor_trail 100
