--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,9 @@ bold_font        Ubuntu Mono Medium
 italic_font      Ubuntu Mono Italic
 bold_italic_font Ubuntu Mono Medium Italic
 
+# Nerd Fonts v3.3.0
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 UbuntuMono Nerd Font
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
 #: choose-fonts` command which will present a nice UI for you to
@@ -20,7 +23,7 @@ bold_italic_font Ubuntu Mono Medium Italic
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-# font_size 11.0
+font_size 11.0
 
 #: Font size (in pts).
 
