--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "lxml>=5.4.0",
+    "pandas>=2.3.0",
+    "pandas-stubs==2.2.3.250527",
+    "typer>=0.16.0",
 ]
 
 [dependency-groups]
@@ -12,3 +15,6 @@ dev = [
     "ruff>=0.11.8",
     "types-lxml>=2025.3.30",
 ]
+
+[tool.ruff]
+line-length = 160
