Maps the F1 key to copy all the scrollback in Kitty to the clipboard

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1997,6 +1997,8 @@ map kitty_mod+k combine : clear_terminal scrollback active : send_text normal \x
 # map kitty_mod+c copy_to_clipboard
 # map cmd+c       copy_to_clipboard
 
+map f1 launch --stdin-source=@screen_scrollback kitten clipboard /dev/stdin
+
 #::  There is also a copy_or_interrupt action that can be optionally
 #::  mapped to Ctrl+C. It will copy only if there is a selection and
 #::  send an interrupt otherwise. Similarly,
