Maps ctrl+alt+enter to open new Kitty windows

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2131,6 +2131,8 @@ map f1 launch --stdin-source=@screen_scrollback kitten clipboard /dev/stdin
 #: New window
 
 map kitty_mod+enter launch --cwd=current
+map ctrl+alt+enter new_window
+
 # map cmd+enter       new_window
 
 #::  You can open a new kitty window running an arbitrary program, for
